--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1 style="text-align: center;">Happy Birthday prabha anna !!!</h1>
     <div class="container">
         <canvas id="canvas"></canvas>
     </div>
+    <audio src=""></audio>
 </body>
 <script src="index.js"></script>
 </html>
